kubernetes/apps/nextcloud/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nextcloud
  namespace: apps
  annotations:
    argocd.argoproj.io/sync-wave: "1"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  parentRefs:
    - name: homelab
      namespace: envoy-gateway-system
      group: gateway.networking.k8s.io
      kind: Gateway
  hostnames:
    - nextcloud.homelab
    - nextcloud.erasmus.works
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nextcloud
          group: ""
          kind: Service
          port: 8080
          weight: 1
